--- a/program.csproj
+++ b/program.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0></TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>Enable</ImplicitUsings>
     <Nullable>Enable</Nullable>
   </PropertyGroup>
