--- a/program.csproj
+++ b/program.csproj
@@ -7,4 +7,8 @@
     <Nullable>Enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="JsonStorage" Version="1.0.0"/>
+  </ItemGroup>
+
 </Project>
