Needs to check if the project exists and display it.

--- a/projectManager.json
+++ b/projectManager.json
@@ -1,1 +1,8 @@
-{}
+{
+  "ProjectTitle": {
+    "ProjectDescription": "This is an example project.",
+    "ProjectLanguage": "Example Language",
+    "ProjectFolder": "example/path",
+    "MainScriptPath": "example/path/sourcefile.sourcefile"
+  }
+}
