Got the app to work on the computer.

--- a/program.csproj
+++ b/program.csproj
@@ -5,6 +5,8 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>Enable</ImplicitUsings>
     <Nullable>Enable</Nullable>
+
+    <RestoreAdditionalProjectSources>./localNuget</RestoreAdditionalProjectSources>
   </PropertyGroup>
 
   <ItemGroup>
